{
    "name": "Control",
    "maps": [
        {
            "name": "Player",
            "id": "0339de92-3bda-4215-90f0-2e27b3f85d7a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6a192eac-295e-4634-9250-273eef860d9d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "6c6400b4-728f-4f3a-bbb1-9006b789f4c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "ced8765f-5d75-443b-a412-215114328372",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "005b5a86-f515-4a1d-82d1-127b32d551c3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill4",
                    "type": "Button",
                    "id": "8101dbf4-79a2-4b39-9f24-8c3ca229a087",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7ef96be1-bff6-429f-b78f-9229b789cfaa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "36ae55bc-786e-41a8-bc6f-df0dcc56d80c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ultimate",
                    "type": "Button",
                    "id": "e81c0e3a-1016-42c5-8139-3e26ae3f12d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Control",
                    "type": "Button",
                    "id": "a3239f58-69b1-4fb6-a6df-8f1744b2e387",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "KeyBoard",
                    "id": "46c6ec4c-d083-489b-9db5-0dbee182f70c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d4430233-ce6e-4994-bda9-44c63484ff9f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5bce3a5d-3160-4ee9-a2d0-43e5a012e38f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "43b60f31-90b6-4610-8afc-21b2479c2abc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "39b25d44-1d23-4b7d-88b1-84372aac7a96",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4726494f-18ae-4ef8-8e78-036ef5ee9a76",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a4d8d16-cede-4ffb-b3df-58fa015d28ed",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3e6fd10-a257-4166-844b-c831fbe320b9",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfa72c88-d250-44bd-9ac6-fe150ade299c",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5db5ca3e-c224-4a32-b053-7b6c35d58c04",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86ef3c72-dfb7-4549-becd-27461f7c3a69",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17e55f00-3e15-48ee-96d6-7cbbfa8c236d",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultimate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9463922d-4114-4777-b6ca-a1da0f3f48bb",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Control",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "General",
            "id": "3934a891-b050-48a5-8818-50ded1fd9288",
            "actions": [
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "79f15cea-c254-4a10-9b8b-4f9d62ce4b28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8dbdc10c-04da-4b0e-9aa4-e1ad9c3cd3b2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}